plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '2.7.11-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.pandora'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://google-api-client-libraries.appspot.com/mavenrepo' }
}

dependencies {
    implementation 'javax.servlet:jstl'
    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    implementation 'mysql:mysql-connector-java:8.0.28'
    annotationProcessor 'org.projectlombok:lombok'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.squareup.okhttp3:okhttp:3.6.0'/*OkHttp*/
    implementation 'org.json:json:20201115' //json
    //implementation 'us.zoom:zoom-sdk:5.7.1' //zoom sdk
    implementation 'com.google.apis:google-api-services-youtube:v3-rev222-1.25.0'   // youtube-v3
    implementation 'com.google.http-client:google-http-client-jackson2:1.36.0'      // google-http
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'       // google-oauth
    implementation 'org.springframework.boot:spring-boot-starter-websocket'         // websocket
    implementation 'com.googlecode.json-simple:json-simple:1.1.1'                   // simple json
    implementation 'commons-io:commons-io:2.11.0'   // commons-io
    implementation 'commons-fileupload:commons-fileupload:1.4'  // file-upload
	implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
   // implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'mysql:mysql-connector-java:8.0.28'
}

tasks.named('test') {
    useJUnitPlatform()
}
